<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/paper_result_dialog_title"
            android:textColor="@color/color_444444"
            android:textSize="@dimen/title_text_size" />

    </RelativeLayout>

    <TextView
        android:id="@+id/paper_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/dp_10"
        android:textColor="@color/color_67A3FF"
        android:textSize="@dimen/button_text_small_size_12"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <com.example.cardpaperdemo.view.PaperResultView
            android:id="@+id/paper_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginBottom="@dimen/dp_4" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/paper_image"
            android:layout_alignBottom="@+id/paper_image">

            <ImageView
                android:id="@+id/paper_line_image"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="-50dp"
                android:layerType="software"
                android:src="@drawable/paper_line"
                android:visibility="invisible" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_2"
            android:layout_below="@+id/paper_image">

            <RelativeLayout
                android:id="@+id/paper_line_view_parent_l1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:translationX="@dimen/dp_140"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:id="@+id/paper_line_view_l1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/paper_line_image_l1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/conformpage_bt_l1" />

                    <ImageView
                        android:id="@+id/paper_line_image_close1"
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:padding="@dimen/dp_5"
                        android:scaleType="fitXY"
                        android:src="@drawable/conformpage_ic_close" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/paper_line_image_add1"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:padding="@dimen/dp_5"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitXY"
                    android:layout_alignBottom="@+id/paper_line_view_l1"
                    android:src="@drawable/conformpage_ic_add"
                    android:visibility="invisible"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/paper_line_view_parent_l2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:translationX="@dimen/dp_180"
                >

                <LinearLayout
                    android:id="@+id/paper_line_view_l2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/paper_line_image_l2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/conformpage_bt_l2" />

                    <ImageView
                        android:id="@+id/paper_line_image_close2"
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:padding="@dimen/dp_5"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/dp_1"
                        android:scaleType="fitXY"
                        android:src="@drawable/conformpage_ic_close" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/paper_line_image_add2"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:padding="@dimen/dp_5"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/conformpage_ic_add"
                    android:visibility="invisible"
                    android:scaleType="fitXY"
                    android:layout_alignBottom="@+id/paper_line_view_l2"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/paper_line_view_parent_l3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:translationX="@dimen/dp_220">

                <LinearLayout
                    android:id="@+id/paper_line_view_l3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/paper_line_image_l3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/conformpage_bt_l3" />

                    <ImageView
                        android:id="@+id/paper_line_image_close3"
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:padding="@dimen/dp_5"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/conformpage_ic_close"
                        />
                </LinearLayout>

                <ImageView
                    android:id="@+id/paper_line_image_add3"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:padding="@dimen/dp_5"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/conformpage_ic_add"
                    android:visibility="invisible"
                    android:scaleType="fitXY"
                    android:layout_alignBottom="@+id/paper_line_view_l3"/>
            </RelativeLayout>
        </FrameLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/paper_hint_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_36"
        android:gravity="center_horizontal"
        android:text="@string/paper_result_dialog_hit"
        android:textColor="@color/color_444444" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_30">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/paper_return_bt"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/app_button_corner"
            android:minWidth="@dimen/dp_140"
            android:text="@string/paper_result_back"
            android:textColor="@color/white" />


        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/paper_confirm_bt"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/app_button_corner"
            android:minWidth="@dimen/dp_140"
            android:text="@string/paper_result_confirm"
            android:textColor="@color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>